src/scss/global/_project_global.scss
@use "./typography";
* {
	box-sizing: border-box;
	padding:0;
	margin:0;
}
html {
	scroll-behavior: smooth;
	font-size: 16px;
}
body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
	padding-top: 75px; // remove this if you don't have a fixed header //
}
.global-block-body-scroll-cst {
	overflow: hidden;
}
.container-cst {
	max-width: 1220px;
	width: 100%;
	margin: 0 auto;
  @media only screen and (max-width: 1215px) {
		padding-left:20px;
		padding-right: 20px;
  }
}
img {
  max-width:100%;
}
a {
	color: inherit;
	text-decoration: none;
}
button {
	background-color: transparent;
	border:1px solid #000000;
	padding: 10px;
	display: block;
	border-radius:5px;
}
// remove once started a project, this just adds style to the init content block //
#base-master-default-content-cst {
	padding:100px 0;
	text-align: center;
	min-height: calc(100vh - 80px);
	display: flex;
	align-items: center;
	.container-cst {
		max-width: 950px;
		.error-txt-wrap {
			color: red;
		}
	}
}

